fix: align datepicker styles with date range picker styles (#1528)
* fix: align datepicker styles with date range picker styles

* fix: remove border property

* fix: fix css targeting of react aria dialog

--- a/src/components/Common/UI/DateRangePicker/DateRangePicker.module.scss
+++ b/src/components/Common/UI/DateRangePicker/DateRangePicker.module.scss
@@ -133,8 +133,6 @@
   width: toRem(286);
 
   :global(.react-aria-CalendarGridHeader) {
-    border-bottom: 1px solid var(--g-colorBorderSecondary);
-
     th {
       padding-bottom: toRem(8);
       text-align: center;
